# 26a-emb-pra-9-expert-felipesarian

./: CMakeLists.txt
.github/workflows/: cppcheck.yml  embedded-check.yml
ei-model/: README.txt
ei-model/model-parameters/: model_metadata.h  model_variables.h
ei-model/tflite-model/: tflite_learn_996605_3_compiled.cpp  tflite_learn_996605_3_compiled.h
main/: CMakeLists.txt  collect_main.c  ei_wrapper.cpp  infer_main.cpp  main.c  mpu6050.c  mpu6050.h  pins.h  rgb_led.c  rgb_led.h
